--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prepare": "husky",
+    "ts:check": "tsc --noEmit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "ts:check": "tsc"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "14.2.15",
@@ -25,6 +27,8 @@
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
