--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,11 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier", "import"],
   "rules": {
     "prettier/prettier": ["error", {
       "singleQuote": true,
-      "jsSingleQuote": true
+      "jsxSingleQuote": true
     }],
     "max-len": "off",
     "no-unused-vars": "error",
@@ -24,6 +24,25 @@
         "img": ["Image"]
       }
     ],
-    "@next/next/no-img-element": "error"
+    "@next/next/no-img-element": "error",
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal"],
+        "pathGroups": [
+          {
+            "pattern": "react",
+            "group": "external",
+            "position": "before"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
   }
 }
