--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,9 +12,9 @@
       "jsxSingleQuote": true
     }],
     "max-len": "off",
-    "no-unused-vars": "error",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "no-console": "warn",
-    "@typescript-eslint/explicit-module-boundary-types": "error",
     "@typescript-eslint/no-explicit-any": "warn",
     "react/display-name": "off",
     "react/no-unescaped-entities": "off",
@@ -29,21 +29,38 @@
     "import/order": [
       "error",
       {
-        "groups": ["builtin", "external", "internal"],
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
+        ],
         "pathGroups": [
           {
             "pattern": "react",
             "group": "external",
             "position": "before"
+          },
+          {
+            "pattern": "@/**",
+            "group": "internal",
+            "position": "after"
           }
         ],
         "pathGroupsExcludedImportTypes": ["react"],
-        "newlines-between": "always",
+        "newlines-between": "always-and-inside-groups",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
-        }
+        },
+        "distinctGroup": false
       }
-    ]
+    ],
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-empty-object-type": "off"
   }
 }
