--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,13 @@
   ],
   "plugins": ["@typescript-eslint", "prettier", "import"],
   "rules": {
-    "prettier/prettier": ["error", {
-      "singleQuote": true,
-      "jsxSingleQuote": true
-    }],
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "jsxSingleQuote": true
+      }
+    ],
     "max-len": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
@@ -29,16 +32,7 @@
     "import/order": [
       "error",
       {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index",
-          "object",
-          "type"
-        ],
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index", "object", "type"],
         "pathGroups": [
           {
             "pattern": "react",
